Fix button display on narrow screens (margin)

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
     color: var(--fontColor);
     font-size: calc(1rem + 1dvw);
     margin-inline: 8px;
-    margin-block: 24px;
+    margin-block: 8px;
     padding: 8px;
     cursor: pointer;
     width: fit-content;
@@ -68,6 +68,7 @@ body {
 }
 #display-message {
   font-size: calc(1.5rem + 1.5dvw);
+  margin-top: 40px;
 }
 .container > footer {
   text-align: right;
